fixed issue where navbar link did not align properly on small screens

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -62,8 +62,14 @@ body {
     }
 }
 
-@media screen and (max-width: 900px) {
+@media screen and (min-width: 768px) and (max-width: 900px) {
     .padding-left {
         padding-left: 35%;
+    }
+}
+
+@media screen and (max-width:768px) {
+    .padding-left {
+        padding-left: 0%
     }
 }
